<resources>
    <string name="app_name">Task Manager</string>

    <string name="inbox">Входящие</string>
    <string name="active">Активные</string>
    <string name="postponed">Отложенные</string>
    <string name="completed">Завершенные</string>

    <string name="complete">Завершить</string>
    <string name="delete">Удалить</string>
    <plurals name="n_tasks_selected">
        <item quantity="one">Выбрана %d задача</item>
        <item quantity="two">Выбраны %d задачи</item>
        <item quantity="few">Выбраны %d задачи</item>
        <item quantity="many">Выбраны %d задач</item>
        <item quantity="other">Выбраны %d задач</item>
    </plurals>

    <string name="create_new_task">Создать задачу</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="save">Сохранить</string>
    <string name="enter_task_name">Введите название задачи</string>
    <string name="please_enter_a_task_name">Пожайлуйста, укажите имя для задачи!</string>
    <string-array name="task_categories">
        <item>@string/inbox</item>
        <item>@string/active</item>
        <item>@string/postponed</item>
    </string-array>
    <string name="without_date">Без даты</string>
    <string name="fixed_date">Фиксированная дата</string>
    <string name="deadline">Дедлайн</string>
    <string name="before">до</string>
    <string name="today">Сегодня</string>
    <string name="this_week">На этой неделе</string>
    <string name="all">Все</string>

    <string name="no_reminders">Нет напоминаний</string>
    <string name="set_date">Задать дату</string>
    <string name="set_time">Задать время</string>
    <string name="at">в</string>
    <string name="please_enter_a_date_for_the_reminder">Пожайлуйста, укажите дату для напоминания!</string>
    <string name="please_enter_the_time_for_the_reminder">Пожайлуйста, укажите время для напоминания!</string>

    <string name="task_alarm_channel_name">Task Manager</string>
    <string name="task_alarm_channel_description">Уведомления для приложения Task Manager</string>
    <string name="reminder">Напоминание:</string>
    <string name="task_alarm_task_description">- %s (%s)</string>

    <string name="exit_without_saving">Вы уверены, что хотите выйти без сохранения?</string>
    <string name="delete_selected_task">Вы уверены, что хотите удалить задачу?</string>
    <string name="delete_selected_tasks">Вы уверены, что хотите удалить задачи?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="tutorial_task_1">Добро пожаловать! Сдвиньте эту задачу налево, чтобы отметить ее как завершенную</string>
    <string name="tutorial_task_2">Сейчас мы в разделе «Входящие». Сюда попадают все новые задачи по умолчанию. Попробуйте создать новую задачу, нажав на знак + в правом нижнем углу</string>
    <string name="tutorial_task_3">Чтобы редактировать задачу (перенести в другую категорию, установить для нее дату выполнения или напоминание) просто нажмите на нее. Попробуйте перенести эту задачу в категорию «Активные»: там представлены примеры отображения разных задач</string>
    <string name="tutorial_task_4">Это пример просроченной задачи.\nРазделы «Сегодня» и «На этой неделе» созданы для удобства просмотра задач. Задачи одновременно отображаются во всех подходящих разделах категории «Активные»</string>
    <string name="tutorial_task_5">Это задача с фиксированным сроком</string>
    <string name="tutorial_task_6">Это задача с дедлайном</string>
    <string name="tutorial_task_7">Для этой задачи установлено напоминание. Срок или дедлайн устанавливать не обязательно, но без него задача не будет показана в разделах «Сегодня» и «На этой неделе»</string>
    <string name="tutorial_task_8">Это пример задачи без срока. Чтобы удалить задачу – нажмите на нее и удерживайте палец до появления меню удаления. Чтобы выбрать дополнительные задачи – просто нажмите на них после открытия меню</string>
    <string name="tutorial_task_9">В раздел «Отложенные» можно перенести задачи, которые пока нельзя или не нужно выполнять. Отложенные задачи не отображаются в категории «Активные»</string>

</resources>
