<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_folder_black"
            android:title="@string/inbox"
            app:actionLayout="@layout/tasks_display_drawer_task_count" />
        <item
            android:id="@+id/nav_active"
            android:icon="@drawable/ic_folder_black"
            android:title="@string/active"
            app:actionLayout="@layout/tasks_display_drawer_task_count" />
        <item
            android:id="@+id/nav_postponed"
            android:icon="@drawable/ic_folder_black"
            android:title="@string/postponed"
            app:actionLayout="@layout/tasks_display_drawer_task_count" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_folder_black"
            android:title="@string/completed"
            app:actionLayout="@layout/tasks_display_drawer_task_count" />
    </group>

</menu>