<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/edit_task_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/enter_task_name"
        android:inputType="textMultiLine"
        android:textAppearance="@style/StandardTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/img_task_category"
        android:layout_width="@dimen/edit_task_icon_size"
        android:layout_height="@dimen/edit_task_icon_size"
        android:src="@drawable/ic_folder_black"
        app:layout_constraintBottom_toBottomOf="@id/spinner_task_category"
        app:layout_constraintEnd_toStartOf="@id/spinner_task_category"
        app:layout_constraintStart_toStartOf="@id/edit_text_task_name"
        app:layout_constraintTop_toTopOf="@id/spinner_task_category" />

    <Spinner
        android:id="@+id/spinner_task_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_task_margin_spinner_start"
        android:layout_marginTop="@dimen/margin_standard"
        android:entries="@array/task_categories"
        app:layout_constraintEnd_toEndOf="@id/edit_text_task_name"
        app:layout_constraintStart_toEndOf="@id/img_task_category"
        app:layout_constraintTop_toBottomOf="@id/edit_text_task_name" />

    <ImageView
        android:id="@+id/img_task_date"
        android:layout_width="@dimen/edit_task_icon_size"
        android:layout_height="@dimen/edit_task_icon_size"
        android:src="@drawable/ic_calendar_black"
        app:layout_constraintBottom_toBottomOf="@id/text_view_task_date"
        app:layout_constraintEnd_toStartOf="@id/text_view_task_date"
        app:layout_constraintStart_toStartOf="@id/edit_text_task_name"
        app:layout_constraintTop_toTopOf="@id/text_view_task_date" />

    <TextView
        android:id="@+id/text_view_task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/without_date"
        android:textAppearance="@style/StandardTextAppearance"
        app:layout_constraintEnd_toEndOf="@id/edit_text_task_name"
        app:layout_constraintStart_toEndOf="@id/img_task_date"
        app:layout_constraintTop_toBottomOf="@id/spinner_task_category" />

    <RadioGroup
        android:id="@+id/radio_group_date_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/text_view_task_date"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_view_task_date"
        app:layout_constraintTop_toBottomOf="@id/text_view_task_date">

        <RadioButton
            android:id="@+id/radio_button_no_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/without_date"
            android:textAppearance="@style/EditTaskSubItemTextAppearance" />

        <RadioButton
            android:id="@+id/radio_button_fixed_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fixed_date"
            android:textAppearance="@style/EditTaskSubItemTextAppearance" />

        <RadioButton
            android:id="@+id/radio_button_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/deadline"
            android:textAppearance="@style/EditTaskSubItemTextAppearance" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>