<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorItemCompletedBackground">

        <ImageView
            android:id="@+id/image_view_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_standard"
            android:src="@drawable/ic_check_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_view_complete"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tasks_display_margin_end_completed"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/image_view_check"
            app:layout_constraintRight_toLeftOf="@id/image_view_check"
            app:layout_constraintTop_toTopOf="@id/image_view_check" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorItemBackground"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Some task name" />

        <ImageView
            android:id="@+id/img_task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:src="@drawable/ic_calendar_black"
            app:layout_constraintEnd_toStartOf="@id/text_view_task_date"
            app:layout_constraintStart_toStartOf="@id/text_view_task_name"
            app:layout_constraintTop_toBottomOf="@id/text_view_task_name" />

        <TextView
            android:id="@+id/text_view_task_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/without_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="@id/img_task_date"
            app:layout_constraintEnd_toEndOf="@id/text_view_task_name"
            app:layout_constraintStart_toEndOf="@id/img_task_date"
            app:layout_constraintTop_toTopOf="@id/img_task_date" />

        <ImageView
            android:id="@+id/img_task_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:layout_marginBottom="@dimen/margin_standard"
            android:src="@drawable/ic_alarm_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_view_task_reminder"
            app:layout_constraintStart_toStartOf="@id/text_view_task_name"
            app:layout_constraintTop_toBottomOf="@id/img_task_date" />

        <TextView
            android:id="@+id/text_view_task_reminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/no_reminders"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="@id/img_task_reminder"
            app:layout_constraintEnd_toEndOf="@id/text_view_task_name"
            app:layout_constraintStart_toEndOf="@id/img_task_reminder"
            app:layout_constraintTop_toTopOf="@id/img_task_reminder" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
